Avoid double scroll bars

--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,6 @@
     white-space: normal;
 }
 
-.ratingallocate_ratings_table {
-    overflow-x: auto;
-    overflow-y: auto;
-}
-
 .ratingallocate_ratings_table tr.ratingallocate_summary,
 .ratingallocate_ratings_table span.ratingallocate_member {
     font-weight: bold;
@@ -75,17 +70,18 @@
 .ratingallocate_ratings_table tbody td:first-child {
     position: sticky;
     left: -2px;
-    background-color: #FFFFFF;
+    background-color: #fff;
+    z-index: 1;
 }
 
 .ratingallocate_ratings_table tr.ratingallocate_summary td {
     position: sticky;
     bottom: -2px;
-    background-color: #FFFFFF;
+    background-color: #fff;
 }
 
 .ratingallocate_ratings_table thead th {
-    background-color: #FFFFFF;
+    background-color: #fff;
     position: sticky;
     top: -2px;
     z-index: 1;
@@ -98,5 +94,5 @@
 }
 
 .ratingallocate_ratings_table_container .no-overflow {
-    max-height: 80vh;
+    overflow: unset;
 }
